# gtest-private

./: .travis.yml  BinaryCalculator.h  CMakeLists.txt  README.md  test.cpp
